--- a/jacob_office_hours/sequential_data.ipynb
+++ b/jacob_office_hours/sequential_data.ipynb
@@ -17,11 +17,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!pip install pmdarima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas_datareader as pdr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-09-24</th>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>96.779999</td>\n",
+       "      <td>97.110001</td>\n",
+       "      <td>103.760002</td>\n",
+       "      <td>21274500</td>\n",
+       "      <td>103.760002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-09-25</th>\n",
+       "      <td>105.449997</td>\n",
+       "      <td>101.570000</td>\n",
+       "      <td>105.300003</td>\n",
+       "      <td>102.239998</td>\n",
+       "      <td>19066600</td>\n",
+       "      <td>102.239998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-09-28</th>\n",
+       "      <td>103.330002</td>\n",
+       "      <td>97.839996</td>\n",
+       "      <td>101.570000</td>\n",
+       "      <td>99.470001</td>\n",
+       "      <td>17026600</td>\n",
+       "      <td>99.470001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-09-29</th>\n",
+       "      <td>100.629997</td>\n",
+       "      <td>96.849998</td>\n",
+       "      <td>99.629997</td>\n",
+       "      <td>98.349998</td>\n",
+       "      <td>17405900</td>\n",
+       "      <td>98.349998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-09-30</th>\n",
+       "      <td>103.459999</td>\n",
+       "      <td>99.050003</td>\n",
+       "      <td>99.910004</td>\n",
+       "      <td>103.260002</td>\n",
+       "      <td>17027600</td>\n",
+       "      <td>103.260002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  High         Low        Open       Close    Volume  \\\n",
+       "Date                                                                   \n",
+       "2015-09-24  104.000000   96.779999   97.110001  103.760002  21274500   \n",
+       "2015-09-25  105.449997  101.570000  105.300003  102.239998  19066600   \n",
+       "2015-09-28  103.330002   97.839996  101.570000   99.470001  17026600   \n",
+       "2015-09-29  100.629997   96.849998   99.629997   98.349998  17405900   \n",
+       "2015-09-30  103.459999   99.050003   99.910004  103.260002  17027600   \n",
+       "\n",
+       "             Adj Close  \n",
+       "Date                    \n",
+       "2015-09-24  103.760002  \n",
+       "2015-09-25  102.239998  \n",
+       "2015-09-28   99.470001  \n",
+       "2015-09-29   98.349998  \n",
+       "2015-09-30  103.260002  "
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdr.get_data_yahoo('NFLX').head()"
    ]
   },
   {
